--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "axios": "^1.7.9",
     "next": "15.1.7",
     "react": "^19.0.0",
